LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Referred_By_Channel__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By Channel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Channels_and_Alliances</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clients (Reffered By)</relationshipLabel>
    <relationshipName>Clients3</relationshipName>
    <type>Lookup</type>
</CustomField>