LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Relationship_Leader_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Leader_Mapped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary Usage</description>
    <label>Relationship Leader Mapped</label>
    <type>Checkbox</type>
</CustomField>