LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients3</relationshipName>
    <type>Lookup</type>
</CustomField>