LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Relationship_Office__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Office</label>
    <referenceTo>Relationship_Office_Master__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>