LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/RelationshipOffice__c.field-meta.xml
<CustomField>
    <fullName>RelationshipOffice__c</fullName>
    <label>Relationship Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GT_Bengaluru</fullName>
            </value>
            <value>
                <fullName>GT_Bhopal</fullName>
            </value>
            <value>
                <fullName>GT_Chennai</fullName>
            </value>
            <value>
                <fullName>GT_Delhi</fullName>
            </value>
            <value>
                <fullName>GT_Hyderabad</fullName>
            </value>
            <value>
                <fullName>GT_Lucknow</fullName>
            </value>
            <value>
                <fullName>GT_Mumbai</fullName>
            </value>
            <value>
                <fullName>GT_Noida</fullName>
            </value>
            <value>
                <fullName>GT_One</fullName>
            </value>
            <value>
                <fullName>GT_Pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>