LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is being used in showing OData at Key Account Level</description>
    <externalId>true</externalId>
    <label>Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>