LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Salesforce_Id_For_Client__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Id_For_Client__c</fullName>
    <externalId>true</externalId>
    <label>Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>