LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Mid Market</fullName>
            </value>
            <value>
                <fullName>PIE Audit</fullName>
            </value>
            <value>
                <fullName>Channels - GCC</fullName>
            </value>
            <value>
                <fullName>Channels - Law Firms</fullName>
            </value>
            <value>
                <fullName>Channels - OPC</fullName>
            </value>
            <value>
                <fullName>Channels - PE/VC</fullName>
            </value>
            <value>
                <fullName>Digital Natives</fullName>
            </value>
            <value>
                <fullName>Large Corporates</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
                <isActive>false</isActive>
                <label>Channel</label>
            </value>
            <value>
                <fullName>DGC</fullName>
                <isActive>false</isActive>
                <label>DGC</label>
            </value>
            <value>
                <fullName>Large Corporate</fullName>
                <isActive>false</isActive>
                <label>Large Corporate</label>
            </value>
            <value>
                <fullName>Large Private</fullName>
                <isActive>false</isActive>
                <label>Large Private</label>
            </value>
            <value>
                <fullName>Largest Listed</fullName>
                <isActive>false</isActive>
                <label>Largest Listed</label>
            </value>
            <value>
                <fullName>Listed</fullName>
                <isActive>false</isActive>
                <label>Listed</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>PE Fund</fullName>
                <isActive>false</isActive>
                <label>PE Fund</label>
            </value>
            <value>
                <fullName>PE Investee</fullName>
                <isActive>false</isActive>
                <label>PE Investee</label>
            </value>
            <value>
                <fullName>S M Private</fullName>
                <isActive>false</isActive>
                <label>S M Private</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>