LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Segment_Leader_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Segment_Leader_Mapped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>temporary usage only</description>
    <label>Segment Leader Mapped</label>
    <type>Checkbox</type>
</CustomField>