LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Share_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet__c</fullName>
    <label>Share of Wallet</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>