LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/ShareCapitalInCr__c.field-meta.xml
<CustomField>
    <fullName>ShareCapitalInCr__c</fullName>
    <label>Paid up Share Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>