LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <label>SIC Code</label>
    <type>TextArea</type>
</CustomField>