LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Client Creation</fullName>
                <color>#FF6666</color>
                <default>true</default>
                <label>New Client Creation</label>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
                <color>#FFCC33</color>
                <label>Pending Verification</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <color>#78C953</color>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <color>#999999</color>
                <label>⛔ Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>