LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Status_DS_Team_Remark_Status__c.field-meta.xml
<CustomField>
    <fullName>Status_DS_Team_Remark_Status__c</fullName>
    <label>Status ( DS Team Remark Status)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>