LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Stock_Exchange_symbol__c.field-meta.xml
<CustomField>
    <fullName>Stock_Exchange_symbol__c</fullName>
    <label>Stock Exchange symbol</label>
    <type>TextArea</type>
</CustomField>