LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment__c</fullName>
    <label>Sub-Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MNC</fullName>
            </value>
            <value>
                <fullName>LC - Large</fullName>
            </value>
            <value>
                <fullName>LC - Emerging</fullName>
            </value>
            <value>
                <fullName>Member Firms</fullName>
            </value>
            <value>
                <fullName>MM - Large</fullName>
            </value>
            <value>
                <fullName>MM - Mid</fullName>
            </value>
            <value>
                <fullName>MM - Small (SMEs)</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Not-for-Profit</fullName>
            </value>
            <value>
                <fullName>Startups</fullName>
            </value>
            <value>
                <fullName>DGC</fullName>
            </value>
            <value>
                <fullName>PIE Audit</fullName>
            </value>
            <value>
                <fullName>Law Firms</fullName>
            </value>
            <value>
                <fullName>PE/VC</fullName>
            </value>
            <value>
                <fullName>OPC</fullName>
            </value>
            <value>
                <fullName>GCC</fullName>
            </value>
            <value>
                <fullName>Academia</fullName>
                <isActive>false</isActive>
                <label>Academia</label>
            </value>
            <value>
                <fullName>Alumni</fullName>
                <isActive>false</isActive>
                <label>Alumni</label>
            </value>
            <value>
                <fullName>BO &amp; family office</fullName>
                <isActive>false</isActive>
                <label>BO &amp; family office</label>
            </value>
            <value>
                <fullName>Banking</fullName>
                <isActive>false</isActive>
                <label>Banking</label>
            </value>
            <value>
                <fullName>CA Firms</fullName>
                <isActive>false</isActive>
                <label>CA Firms</label>
            </value>
            <value>
                <fullName>CFO</fullName>
                <isActive>false</isActive>
                <label>CFO</label>
            </value>
            <value>
                <fullName>CHRO</fullName>
                <isActive>false</isActive>
                <label>CHRO</label>
            </value>
            <value>
                <fullName>CIO CDO CISO</fullName>
                <isActive>false</isActive>
                <label>CIO CDO CISO</label>
            </value>
            <value>
                <fullName>CMO</fullName>
                <isActive>false</isActive>
                <label>CMO</label>
            </value>
            <value>
                <fullName>GLB Listed</fullName>
                <isActive>false</isActive>
                <label>GLB Listed</label>
            </value>
            <value>
                <fullName>Key Account Leaders</fullName>
                <isActive>false</isActive>
                <label>Key Account Leaders</label>
            </value>
            <value>
                <fullName>Law Firm</fullName>
                <isActive>false</isActive>
                <label>Law Firm</label>
            </value>
            <value>
                <fullName>MM - PE</fullName>
                <isActive>false</isActive>
                <label>MM - PE</label>
            </value>
            <value>
                <fullName>Member Firms Leaders</fullName>
                <isActive>false</isActive>
                <label>Member Firms Leaders</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>