LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/SubIndustry_Delete__c.field-meta.xml
<CustomField>
    <fullName>SubIndustry_Delete__c</fullName>
    <label>Sub Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SubIndustry</valueSetName>
    </valueSet>
</CustomField>