LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <label>Ticker Symbol</label>
    <type>TextArea</type>
</CustomField>