LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Total_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Lost__c</fullName>
    <description>No of opportunities having stage as closed lost</description>
    <label>Total Closed Lost</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>