LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Total_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Won__c</fullName>
    <description>No of opportunities having stage as closed won</description>
    <label>Total Closed Won</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>