LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Total_Diluted_Earning_Loss_per_Share__c.field-meta.xml
<CustomField>
    <fullName>Total_Diluted_Earning_Loss_per_Share__c</fullName>
    <label>Total Diluted Earning/Loss per Share</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>