LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Total_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees__c</fullName>
    <label>Total Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-10</fullName>
            </value>
            <value>
                <fullName>11-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>1000 above</fullName>
            </value>
            <value>
                <fullName>101 - 250</fullName>
            </value>
            <value>
                <fullName>101-500</fullName>
                <isActive>false</isActive>
                <label>101-500</label>
            </value>
            <value>
                <fullName>Above 500</fullName>
                <isActive>false</isActive>
                <label>Above 500</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>