LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Total_Equity__c.field-meta.xml
<CustomField>
    <fullName>Total_Equity__c</fullName>
    <label>Total Equity</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>