LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Total_No_of_employees__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_employees__c</fullName>
    <label>Total No of employees</label>
    <length>24</length>
    <type>Text</type>
</CustomField>