LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Total_Revenue_Generated__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Generated__c</fullName>
    <label>Total Revenue Generated</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>