LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/TotalNoOfOpportunity__c.field-meta.xml
<CustomField>
    <fullName>TotalNoOfOpportunity__c</fullName>
    <label>Total No Of Opportunity</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>