LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/TotalProbability__c.field-meta.xml
<CustomField>
    <fullName>TotalProbability__c</fullName>
    <label>Total Probability</label>
    <summarizedField>Opportunity.Probability</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>