LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Verified_by_Ds_Team__c.field-meta.xml
<CustomField>
    <fullName>Verified_by_Ds_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified by (Ds Team)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>