LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/VerifiedByDSTeam__c.field-meta.xml
<CustomField>
    <fullName>VerifiedByDSTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified By DS Team</label>
    <type>Checkbox</type>
</CustomField>