LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/WCGTId__c.field-meta.xml
<CustomField>
    <fullName>WCGTId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>WCGT Id is updated when client is created</description>
    <externalId>true</externalId>
    <inlineHelpText>WCGT Id for Client</inlineHelpText>
    <label>WCGT Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>