LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Working_capital__c.field-meta.xml
<CustomField>
    <fullName>Working_capital__c</fullName>
    <label>Working capital</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>