LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>Year_Founded__c</fullName>
    <label>Year Founded</label>
    <length>24</length>
    <type>Text</type>
</CustomField>