LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/YearEnded__c.field-meta.xml
<CustomField>
    <fullName>YearEnded__c</fullName>
    <label>Year Ended</label>
    <type>Date</type>
</CustomField>