LinKreta_POC_Repository/force-app/main/default/objects/Account/recordTypes/Chambers.recordType-meta.xml
<RecordType>
    <fullName>Chambers</fullName>
    <active>false</active>
    <label>Chambers</label>
</RecordType>