LinKreta_POC_Repository/force-app/main/default/objects/Account/recordTypes/Channels_and_Alliances.recordType-meta.xml
<RecordType>
    <fullName>Channels_and_Alliances</fullName>
    <active>true</active>
    <label>Channels and Alliances</label>
</RecordType>