LinKreta_POC_Repository/force-app/main/default/objects/Account/recordTypes/GT_Client_Group.recordType-meta.xml
<RecordType>
    <fullName>GT_Client_Group</fullName>
    <active>true</active>
    <label>GT Client Group</label>
</RecordType>