LinKreta_POC_Repository/force-app/main/default/objects/Account/recordTypes/Key_Account.recordType-meta.xml
<RecordType>
    <fullName>Key_Account</fullName>
    <active>true</active>
    <label>Key Account</label>
</RecordType>