LinKreta_POC_Repository/force-app/main/default/objects/Account/recordTypes/LawFirmIndependentDirectors.recordType-meta.xml
<RecordType>
    <fullName>LawFirmIndependentDirectors</fullName>
    <active>false</active>
    <label>Law Firm / Independent Directors</label>
</RecordType>