LinKreta_POC_Repository/force-app/main/default/objects/Account/recordTypes/MemberFirm.recordType-meta.xml
<RecordType>
    <fullName>MemberFirm</fullName>
    <active>false</active>
    <label>Member Firm</label>
</RecordType>