LinKreta_POC_Repository/force-app/main/default/objects/Account/recordTypes/Non_Client.recordType-meta.xml
<RecordType>
    <fullName>Non_Client</fullName>
    <active>false</active>
    <label>Non Client</label>
</RecordType>