LinKreta_POC_Repository/force-app/main/default/objects/Account/validationRules/Account_Name_Read_Only_for_Standard_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Read_Only_for_Standard_User</fullName>
    <active>true</active>
    <errorConditionFormula>if(ISCHANGED(IsNameChange__c), false, 
   OR(
       AND
       (
           AND(
                ISCHANGED(Name),
                $Profile.Name&lt;&gt;&apos;System Administrator&apos;, 
                $User.Partner_Login_User_Profile__c&lt;&gt;&apos;System Administrator&apos;,  
                NOT(
                    AND(
                        RecordType.DeveloperName =&apos;Key_Account&apos;,
                        $Profile.Name=&apos;Markets Ecosystems&apos;,
                        $User.Partner_Login_User_Profile__c&lt;&gt;&apos;Markets Ecosystems&apos;
                    )
                )
           ),
           
           AND(
                ISCHANGED(Name),
                $Profile.Name&lt;&gt;&apos;System Administrator&apos;,
                $User.Partner_Login_User_Profile__c&lt;&gt;&apos;System Administrator&apos;, 
                NOT(
                    AND(
                        RecordType.DeveloperName =&apos;GT_Client_Group&apos;,
                        $Profile.Name=&apos;Markets Ecosystems&apos;,
                        $User.Partner_Login_User_Profile__c&lt;&gt;&apos;Markets Ecosystems&apos;
                    )
                )
            )
       ), 
       
       AND(
            OR(
                AND(
                    ISCHANGED(Name),
                    RecordType.DeveloperName =&apos;Client&apos;,
                    $Profile.Name&lt;&gt;&apos;System Administrator&apos;,
                    $User.Partner_Login_User_Profile__c&lt;&gt;&apos;System Administrator&apos;,
                    NOT( ISCHANGED( IsNameChange__c ) ) 
                ),
                AND(
                    ISCHANGED(Name),
                    RecordType.DeveloperName =&apos;Client&apos;,
                    $Profile.Name = &apos;System Administrator&apos;,
                    ISPICKVAL(DS_Team_Approval_Status__c, &apos;DS Approved&apos;),
                    NOT( ISCHANGED( IsNameChange__c ) )
                )
            )
             
       )
   )
)</errorConditionFormula>
    <errorMessage>Client Name is Not Editable</errorMessage>
</ValidationRule>