LinKreta_POC_Repository/force-app/main/default/objects/Account/validationRules/Client_address_Check_Comma.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_address_Check_Comma</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
    RecordType.Name =&apos;Client&apos;,
    RecordType.Name =&apos;Bill To Client&apos;
),
    NOT(ISBLANK(ClientAddress__Street__s)),
    NOT(
        AND(
            CONTAINS(ClientAddress__Street__s, &apos;,&apos;),
            REGEX(ClientAddress__Street__s, &quot;.*[a-zA-Z0-9].*,.*[a-zA-Z0-9].*&quot;)
        
        
       ) 
   )
)</errorConditionFormula>
    <errorDisplayField>ClientAddress__Street__s</errorDisplayField>
    <errorMessage>Please add a comma-separated address</errorMessage>
</ValidationRule>