LinKreta_POC_Repository/force-app/main/default/objects/Account/validationRules/Client_Address_Zip_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Address_Zip_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    NOT(ISBLANK(ClientAddress__PostalCode__s )),
    LEN(ClientAddress__PostalCode__s ) &gt; 10
)</errorConditionFormula>
    <errorDisplayField>ClientAddress__PostalCode__s</errorDisplayField>
    <errorMessage>Character length should be less than 10.</errorMessage>
</ValidationRule>