LinKreta_POC_Repository/force-app/main/default/objects/Account/validationRules/Client_Enrichment_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Enrichment_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
        $User.Profile_Name__c = &apos;GT DS Team&apos;,
        NOT(ISCHANGED(Status__c)),
	ISPICKVAL(Status__c, &quot;Pending Verification&quot;),
	NOT(ISPICKVAL(External_Database_Source__c, &quot;None of them&quot;)),
	OR(
		AND (
			   NOT(ISPICKVAL(External_Database_Source__c, &quot;CapIQ&quot;)),
			   NOT(ISPICKVAL(External_Database_Source__c, &quot;MCA&quot;))
		   ),
		AND(
			ISPICKVAL(External_Database_Source__c, &quot;CapIQ&quot;),
			ISBLANK(capIQId__c)
		),
		AND(
			ISPICKVAL(External_Database_Source__c, &quot;MCA&quot;),
			ISBLANK(MCA_ID__c)
		)
	)
)</errorConditionFormula>
    <errorMessage>Enrichment of data is required.</errorMessage>
</ValidationRule>