LinKreta_POC_Repository/force-app/main/default/objects/Account/validationRules/Gt_Client_Group_Field_Only_Change_By_CM.validationRule-meta.xml
<ValidationRule>
    <fullName>Gt_Client_Group_Field_Only_Change_By_CM</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED( GT_Client_Group__c ),
  ISPICKVAL(  DS_Team_Approval_Status__c  , &quot;DS Approved&quot;),
  NOT($Profile.Name = &quot;Markets Ecosystems&quot;),
  NOT($Profile.Name = &quot;System Administrator&quot;),
  NOT($User.Partner_Login_User_Profile__c = &quot;System Administrator&quot;),
NOT($User.Partner_Login_User_Profile__c = &quot;PT1&quot;),
NOT($User.Partner_Login_User_Profile__c = &quot;Markets Ecosystems&quot;)
)</errorConditionFormula>
    <errorDisplayField>GT_Client_Group__c</errorDisplayField>
    <errorMessage>&quot;GT Client Group&quot; field is editable only for MEC team</errorMessage>
</ValidationRule>