LinKreta_POC_Repository/force-app/main/default/objects/Account/validationRules/Industry_Segment_Sector_Field_Not_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Industry_Segment_Sector_Field_Not_edit</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( DS_Team_Approval_Status__c , &quot;DS Approved&quot;),
OR(
 (ISCHANGED(Industry)),
  (ISCHANGED( Segment__c)),
  (ISCHANGED(Industry__c ))

))</errorConditionFormula>
    <errorMessage>Segment, Industry fields should not be editable if the client is active</errorMessage>
</ValidationRule>