LinKreta_POC_Repository/force-app/main/default/objects/Account/validationRules/Mandate_DS_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_DS_Approval</fullName>
    <active>true</active>
    <description>This validation rule is written to mandate the user to process the DS Approval before changing the Status to &apos;Active&apos;.&apos;</description>
    <errorConditionFormula>AND(
	ISCHANGED(Status__c),
	NOT(ISPICKVAL(DS_Team_Approval_Status__c, &quot;DS Approved&quot;)),
	ISPICKVAL(Status__c, &quot;Active&quot;)		
)</errorConditionFormula>
    <errorMessage>DS Approval is required.</errorMessage>
</ValidationRule>