LinKreta_POC_Repository/force-app/main/default/objects/Account/validationRules/No_Of_Employees_Should_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Of_Employees_Should_Number</fullName>
    <active>true</active>
    <description>This rule is used to force the user to add only number values in &quot;Total no of Employees&quot; field.</description>
    <errorConditionFormula>AND 
(
   NOT(REGEX(Total_No_of_employees__c, &quot;^[0-9]+$&quot;)),
   ISCHANGED(Total_No_of_employees__c),
   RecordType.Name = &apos;Client&apos;,
   NOT(ISBLANK(Total_No_of_employees__c)) 
)</errorConditionFormula>
    <errorDisplayField>Total_No_of_employees__c</errorDisplayField>
    <errorMessage>Please add number value.</errorMessage>
</ValidationRule>