LinKreta_POC_Repository/force-app/main/default/objects/Account/validationRules/Reason_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_should_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &apos;Client&apos;,
ISPICKVAL(Status__c, &apos;Inactive&apos;),
ISBLANK(Reason__c)  

)</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Please Fill the Reason</errorMessage>
</ValidationRule>